# nbai

./: .gitignore  README.md  config  pyproject.toml  requirements.txt  thenews  urls
scripts/: article3.sh  article3_errors.conf  article_processor.py  llmbench.py  models.txt  nbai.py  urls.txt
