[project]
name = "newsboat-url-processor"
version = "0.1.0"
description = "A tool to process Newsboat RSS feed URLs with AI-powered summarization using Ollama."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
]

[project.scripts]
article-processor = "scripts.article_processor:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
